# pipelines

./: .gitignore  README.md  __init__.py  _factory.py  pyproject.toml
backtesting/: __init__.py  engine.py  metrics.py  reporting.py
config/: __init__.py  schemas.py  settings.py
core/: __init__.py  base.py  state.py  types.py
daily/: __init__.py  dedup.py  enrichment.py  features.py  graph_update.py  pipeline.py  signals.py  store.py
data_factory/: __init__.py  cleaner.py  collector.py  enricher.py  store.py  transformer.py
explainability/: __init__.py  analogs.py  generator.py  graph_paths.py  shap.py
features/: __init__.py  engineering.py  signals.py  store.py
forecasting/: __init__.py  ensemble.py  forecaster.py  models.py
ingestion/: __init__.py  gdelt.py  newsapi.py  rss.py  webhooks.py
intelligence/: __init__.py  conflict.py  economic.py
intelligence/alternative/: __init__.py  ais.py  commodities.py  flights.py  satellite.py
intelligence/news/: __init__.py  global_news.py  sources.py
kg/: __init__.py  edges.py  graph.py  nodes.py  queries.py
memory/: encoding.py
nlp/: __init__.py  embedding.py  entities.py  sentiment.py  summarization.py
orchestration/: __init__.py  dag.py  executor.py  monitor.py  scheduler.py  triggers.py  workflow.py
realtime/: __init__.py  pipeline.py
similarity/: __init__.py  embedding.py  links.py  matcher.py  pipeline.py  qdrant.py
streaming/: __init__.py  kafka.py  processor.py  sink.py  websocket.py
training/: __init__.py  evaluation.py  models.py  trainer.py
