[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "marketatlas-pipelines"
version = "0.1.0"
description = "MarketAtlas Data Pipeline Factory — event ingestion, NLP enrichment, knowledge graphs, feature engineering, training, forecasting, backtesting, and real-time streaming"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "networkx>=3.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "httpx>=0.25",
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "websockets>=12.0",
    "aiokafka>=0.10",
    "qdrant-client>=1.7",
    "sentence-transformers>=2.2",
    "shap>=0.43",
    "scikit-learn>=1.3",
    "mlflow>=2.8",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "s3fs>=2023.12",
    "python-dateutil>=2.8",
    "orjson>=3.9",
    "structlog>=23.2",
    "tenacity>=8.2",
    "pyarrow>=14.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"pipelines" = ["py.typed"]
